--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "hexo": "^5.0.0",
     "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-baidu-sitemap": "^0.1.9",
     "hexo-generator-category": "^1.0.0",
+    "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-json-content": "^4.2.3",
+    "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^1.0.0",
     "hexo-migrator-rss": "^1.1.0",
     "hexo-next-giscus": "^1.1.0",
