--- a/_config.volantis.yml
+++ b/_config.volantis.yml
@@ -32,8 +32,7 @@ csp:
     manifest-src 'self' https: *;
     child-src https:;
     script-src 'self' https: 'unsafe-inline' *;
-    style-src 'self' https: 'unsafe-inline' *;
-  "
+    style-src 'self' https: 'unsafe-inline' *;"
   # 可以使用自动程序替换默认的 'unsafe-inline' 和 * 生成更严格的内容安全策略.
   # 另可以参考官网的 gulp 方案.
   # gulpfile.js https://github.com/volantis-x/community/blob/main/gulpfile.js
