--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hexo-generator-tag": "^1.0.0",
     "hexo-migrator-rss": "^1.1.0",
     "hexo-next-giscus": "^1.1.0",
+    "hexo-related-popular-posts": "^5.0.1",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^2.0.0",
