build: 添加Go模块支持并更新主题配置
- 初始化go.mod和go.sum文件
- 将主题配置从hugo.yaml迁移到模块导入
- 添加Instagram和Twitter短代码模板
- 新增代码块渲染模板(goat和mermaid)
- 更新文档转换技能说明中的图片格式
- 添加分类/标签页模板

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -2,8 +2,11 @@ baseURL: "https://harryzhang.cn/"
 languageCode: "zh-CN"
 defaultContentLanguage: "zh-cn"
 title: "Harry 的个人空间"
-theme: "LoveIt"
 hasCJKLanguage: true
+
+module:
+  imports:
+    - path: "github.com/dillonzq/LoveIt"
 
 author:
   name: "Harry"
